changed img css to keep the images from overlapping container, still have issues at different resolutions with shifting

--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ h2 {
 div img{
   display: block;
   margin: 0px auto;
+  max-width: 80%;
 }
 
 section > p:first-of-type {
